fix: freeze scrolling; minor css fixes for menu on ios

--- a/components/Navigation.module.scss
+++ b/components/Navigation.module.scss
@@ -110,7 +110,7 @@
 
     .hotDog1 {
       position: absolute;
-      top: 16px;
+      top: 18px;
       left: 10px;
       width: 25px;
       height: 5px;
@@ -121,7 +121,7 @@
 
     .hotDog2 {
       position: absolute;
-      top: 27px;
+      top: 29px;
       left: 10px;
       width: 25px;
       height: 5px;
