--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,6 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: 'DM Sans', sans-serif;
